# example_rbatis_with_actix_web

./: Cargo.toml  README.md  application-dev.yaml  application-prod.yaml  user.sql
config/: Cargo.toml
config/src/: lib.rs
src/: main.rs
src/common/: mod.rs  util.rs
src/controller/: mod.rs  openapi.rs  user_controller.rs
src/model/: mod.rs  patient.rs  user.rs
