[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = { workspace = true }
nacos-sdk   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
schemars    = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber  = {workspace = true}
lombok              = {workspace = true}

[features]
debug = []